Name:           distributed-dot-product
Version:        0.1
Synopsis:       Distributed dot product
Description:
  Distributed dot product implemented using cloud haskell

Cabal-Version:  >= 1.10
License:        Apache-2.0
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:       Data
Build-Type:     Simple

Executable dot-product
  Ghc-options:          -Wall -threaded
  Default-language:	Haskell2010
  Build-Depends:
    base         >=3 && <5,
    bytestring,
    transformers >= 0.4.1,
    binary       >= 0.7.2,
    vector-binary-instances >= 0.2.1.0,
    vector       >= 0.10,
    containers, 
    time,
    distributed-process                >= 0.5.0,
    distributed-process-simplelocalnet >= 0.2.0.9,
    distributed-process-platform       >= 0.1,
    distributed-static                 >= 0.2.1
  Main-is:
    dot-product.hs
  Other-modules:
    Chan
    Worker
    Types
    RC.Actors.Worker
    RC.Actors.Fold
    RC.Combinators
    RC.Types


Executable single-threaded
  Ghc-options:          -Wall -threaded
  Default-language:	Haskell2010
  Build-Depends:
    base         >=3 && <5,
    bytestring,
    transformers >= 0.4.1,
    binary       >= 0.7.2,
    data-binary-ieee754,
    vector-binary-instances >= 0.2.1.0,
    vector       >= 0.10,
    containers, 
    time,
    distributed-process                >= 0.5.0,
    distributed-process-simplelocalnet >= 0.2.0.9,
    distributed-process-platform       >= 0.1,
    distributed-static                 >= 0.2.1
  Main-is:
    single-threaded.hs
  Other-modules:
    DNA.AST
    DNA.SingleThreaded
    DNA.Utils
