Name:           dna
Version:        0.1
Synopsis:       Descriptive Numerical Analysis
Description:
  Graph of actors

Cabal-Version:  >= 1.10
License:        Apache-2.0
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:       Data
Build-Type:     Simple

Data-files:
  data/template.cabal

Library
  Ghc-options:          -Wall
  Default-language:	Haskell2010
  Build-Depends:
    base         >=3 && <5,
    transformers >= 0.4.1,
    containers,
    binary,
    vector,
    fgl,
    haskell-src-exts,
    haskell-src-exts-qq
  Exposed-modules:
    DNA
    DNA.AST
    DNA.Actor
    DNA.Compiler.Basic
    DNA.Compiler.Types
    DNA.Compiler.CH
    DNA.Compiler.Scheduler
  Other-modules:
    Paths_dna
