name:          CloudGridder
version:       0.0.0.1
homepage:      https://github.com/SKA-ScienceDataProcessor/RC
license:       Apache-2.0
license-file:  LICENSE
copyright:     (c) Braam Research, LLC
author:        Kyrill Briantsev
maintainer:    Kyrill Briantsev <kyrill.briantsev@braamresearch.com>
bug-reports:   mailto:kyrill.briantsev@braamresearch.com
build-type:    Simple
cabal-version: >=1.16

Description:
  Cloud Haskell gridder

executable CloudGridder
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          GridMe.hs

  build-depends:  base >= 4.2 && < 5
                , containers
                , binary
                , mmap
                , distributed-process
                , distributed-static
                , network-transport-tcp
                , network

  ghc-options: -Wall -O2 -threaded

  -- other-modules:
