name:                linux-perf-stat
version:             0.1.0.0
-- synopsis:
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Peter Wortmann
maintainer:          Peter.Wortmann@braamresearch.com
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag pfm
     Description:    Enable support for libpfm (allows access to more counters)
     Default:        False

library
  exposed-modules:   Profiling.Linux.Perf.Stat
                     Profiling.Linux.Perf.Stat.Types
  build-depends:     base >=4.7 && <4.8
  default-language:  Haskell2010
  ghc-options:       -Wall
  c-sources:         cbits/perf.c
  if flag(pfm)
    extra-libraries: pfm
    cpp-options:     -DUSE_LIBPFM
    cc-options:      -DUSE_LIBPFM

executable test
  hs-source-dirs:    src
  main-is:           test.hs
  default-language:  Haskell2010
  ghc-options:       -Wall
  build-depends:     base >=4.7 && <4.8,
                     linux-perf-stat,
                     time >=1.4 && <1.5
  if flag(pfm)
    cpp-options:     -DUSE_LIBPFM
