name:                dna-flow
version:             0.5
synopsis:            High-level DSL for strategic data flow programming
homepage:            https://github.com/SKA-ScienceDataProcessor/RC
license:             Apache-2.0
license-file:        ../LICENSE
author:              Peter Braam
maintainer:          peter.braam@peterbraam.com
-- copyright:
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.16
description:

Flag cuda
   description: Build with support for CUDA
   default: True

----------------------------------------------------------------
library
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
  build-depends:
    base         >=4.6,
    binary       >= 0.7,
    containers   >= 0.5,
    mtl          >= 2.1,
    unordered-containers >= 0.2,
    hashable     >= 1.2,
    bytestring   >= 0.10,
    fixed-vector-hetero >= 0.2,
    dna          >= 0.5
  Exposed-modules: Flow,
                   Flow.Builder,
                   Flow.Run,
                   Flow.Kernel,
                   Flow.Domain,
                   Flow.Vector,
                   Flow.Halide.Types
                   Flow.Internal,
                   Flow.Halide.BufferT,
                   Flow.Halide.Marshal
  if flag(cuda)
    build-depends: cuda, cufft
    cpp-options:   -DUSE_CUDA
