name:                oskar
version:             0.1.0.0
license-file:        oskar_binary/copying.txt
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     OskarReader
  other-modules:       BinaryInstances,
                       OskarBinReaderFFI
  build-depends:       base >=4.7 && <4.8,
                       ghc-prim,
                       storable-complex,
                       filepath,
                       binary
  default-language:    Haskell2010
  c-sources:           OskarBinReader.cpp
                       oskar_binary/src/oskar_binary_create.c
                       oskar_binary/src/oskar_binary_free.c
                       oskar_binary/src/oskar_binary_query.c
                       oskar_binary/src/oskar_binary_read.c
                       oskar_binary/src/oskar_crc.c
                       oskar_binary/src/oskar_endian.c
  cc-options:          --std=c++0x -O2 -Wall -DNDEBUG
  include-dirs:        ., oskar_binary
  extra-libraries:     stdc++
  ghc-options:         -Wall

executable oskar-header
  main-is:             oskar-header.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base, oskar
