
name:                cupti
version:             0.1.0.0
license:             Apache-2.0
license-file:        ../../LICENSE
author:              Peter Wortmann
maintainer:          Peter.Wortmann@braamresearch.com
category:            Development
build-type:          Custom
cabal-version:       >=1.10

Flag test
  description:         Build test program. This is not the default because it pulls in quite heavy dependencies.
  default:             False

library
  exposed-modules:     Profiling.CUDA.Activity,
                       Profiling.CUDA.Metrics
  build-depends:       base
  default-language:    Haskell2010
  ghc-options:         -Wall
  extra-libraries:     cuda, cupti
  c-sources:           cbits/cupti_activity.c,
                       cbits/cupti_metrics.c

executable test
  hs-source-dirs:      test
  main-is:             test.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  if flag(test) {
    build-depends:     base >=4.7,
                       time,
                       cupti,
                       accelerate, accelerate-cuda, accelerate-io,
                       vector
  } else {
    buildable:         False
  }
